--- a/SuperShopManegementSystem/SuperShopManegementSystem/Loading.resx
+++ b/SuperShopManegementSystem/SuperShopManegementSystem/Loading.resx
@@ -118,49 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAbUAAAIpCAYAAAAl5qZ4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAimSURBVHhe7dfRCcMwFARB91+P+kvQRyCBNHDLDAj83MBy
-        DwDknHNe931/u91ut9u9cN9vAEj4CZvKAZAhagAss9QAyNAxADIsNQCaRA2AZZYaABk6BkCGpQZAk6gB
-        sMxSAyBDxwDIsNQAaBI1AJZZagBk6BgAGZYaAE2iBsAySw2ADB0DIMNSA6BJ1ABYZqkBkKFjAGRYagA0
-        iRoAyyw1ADJ0DIAMSw2AJlEDYJmlBkCGjgGQYakB0CRqACyz1ADI0DEAMiw1AJpEDYBllhoAGToGQIal
-        BkCTqAGwzFIDIEPHAMiw1ABoEjUAlllqAGToGAAZlhoATaIGwDJLDYAMHQMgw1IDoEnUAFhmqQGQoWMA
-        ZFhqADSJGgDLLDUAMnQMgAxLDYAmUQNgmaUGQIaOAZBhqQHQJGoALLPUAMjQMQAyLDUAmkQNgGWWGgAZ
-        OgZAhqUGQJOoAbDMUgMgQ8cAyLDUAGgSNQCWWWoAZOgYABmWGgBNogbAMksNgAwdAyDDUgOgSdQAWGap
-        AZChYwBkWGoANIkaAMssNQAydAyADEsNgCZRA2CZpQZAho4BkGGpAdAkagAss9QAyNAxADIsNQCaRA2A
-        ZZYaABk6BkCGpQZAk6gBsMxSAyBDxwDIsNQAaBI1AJZZagBk6BgAGZYaAE2iBsAySw2ADB0DIMNSA6BJ
-        1ABYZqkBkKFjAGRYagA0iRoAyyw1ADJ0DIAMSw2AJlEDYJmlBkCGjgGQYakB0CRqACyz1ADI0DEAMiw1
-        AJpEDYBllhoAGToGQIalBkCTqAGwzFIDIEPHAMiw1ABoEjUAlllqAGToGAAZlhoATaIGwDJLDYAMHQMg
-        w1IDoEnUAFhmqQGQoWMAZFhqADSJGgDLLDUAMnQMgAxLDYAmUQNgmaUGQIaOAZBhqQHQJGoALLPUAMjQ
-        MQAyLDUAmkQNgGWWGgAZOgZAhqUGQJOoAbDMUgMgQ8cAyLDUAGgSNQCWWWoAZOgYABmWGgBNogbAMksN
-        gAwdAyDDUgOgSdQAWGapAZChYwBkWGoANIkaAMssNQAydAyADEsNgCZRA2CZpQZAho4BkGGpAdAkagAs
-        s9QAyNAxADIsNQCaRA2AZZYaABk6BkCGpQZAk6gBsMxSAyBDxwDIsNQAaBI1AJZZagBk6BgAGZYaAE2i
-        BsAySw2ADB0DIMNSA6BJ1ABYZqkBkKFjAGRYagA0iRoAyyw1ADJ0DIAMSw2AJlEDYJmlBkCGjgGQYakB
-        0CRqACyz1ADI0DEAMiw1AJpEDYBllhoAGToGQIalBkCTqAGwzFIDIEPHAMiw1ABoEjUAlllqAGToGAAZ
-        lhoATaIGwDJLDYAMHQMgw1IDoEnUAFhmqQGQoWMAZFhqADSJGgDLLDUAMnQMgAxLDYAmUQNgmaUGQIaO
-        AZBhqQHQJGoALLPUAMjQMQAyLDUAmkQNgGWWGgAZOgZAhqUGQJOoAbDMUgMgQ8cAyLDUAGgSNQCWWWoA
-        ZOgYABmWGgBNogbAMksNgAwdAyDDUgOgSdQAWGapAZChYwBkWGoANIkaAMssNQAydAyADEsNgCZRA2CZ
-        pQZAho4BkGGpAdAkagAss9QAyNAxADIsNQCaRA2AZZYaABk6BkCGpQZAk6gBsMxSAyBDxwDIsNQAaBI1
-        AJZZagBk6BgAGZYaAE2iBsAySw2ADB0DIMNSA6BJ1ABYZqkBkKFjAGRYagA0iRoAyyw1ADJ0DIAMSw2A
-        JlEDYJmlBkCGjgGQYakB0CRqACyz1ADI0DEAMiw1AJpEDYBllhoAGToGQIalBkCTqAGwzFIDIEPHAMiw
-        1ABoEjUAlllqAGToGAAZlhoATaIGwDJLDYAMHQMgw1IDoEnUAFhmqQGQoWMAZFhqADSJGgDLLDUAMnQM
-        gAxLDYAmUQNgmaUGQIaOAZBhqQHQJGoALLPUAMjQMQAyLDUAmkQNgGWWGgAZOgZAhqUGQJOoAbDMUgMg
-        Q8cAyLDUAGgSNQCWWWoAZOgYABmWGgBNogbAMksNgAwdAyDDUgOgSdQAWGapAZChYwBkWGoANIkaAMss
-        NQAydAyADEsNgCZRA2CZpQZAho4BkGGpAdAkagAss9QAyNAxADIsNQCaRA2AZZYaABk6BkCGpQZAk6gB
-        sMxSAyBDxwDIsNQAaBI1AJZZagBk6BgAGZYaAE2iBsAySw2ADB0DIMNSA6BJ1ABYZqkBkKFjAGRYagA0
-        iRoAyyw1ADJ0DIAMSw2AJlEDYJmlBkCGjgGQYakB0CRqACyz1ADI0DEAMiw1AJpEDYBllhoAGToGQIal
-        BkCTqAGwzFIDIEPHAMiw1ABoEjUAlllqAGToGAAZlhoATaIGwDJLDYAMHQMgw1IDoEnUAFhmqQGQoWMA
-        ZFhqADSJGgDLLDUAMnQMgAxLDYAmUQNgmaUGQIaOAZBhqQHQJGoALLPUAMjQMQAyLDUAmkQNgGWWGgAZ
-        OgZAhqUGQJOoAbDMUgMgQ8cAyLDUAGgSNQCWWWoAZOgYABmWGgBNogbAMksNgAwdAyDDUgOgSdQAWGap
-        AZChYwBkWGoANIkaAMssNQAydAyADEsNgCZRA2CZpQZAho4BkGGpAdAkagAss9QAyNAxADIsNQCaRA2A
-        ZZYaABk6BkCGpQZAk6gBsMxSAyBDxwDIsNQAaBI1AJZZagBk6BgAGZYaAE2iBsAySw2ADB0DIMNSA6BJ
-        1ABYZqkBkKFjAGRYagA0iRoAyyw1ADJ0DIAMSw2AJlEDYJmlBkCGjgGQYakB0CRqACyz1ADI0DEAMiw1
-        AJpEDYBllhoAGToGQIalBkCTqAGwzFIDIEPHAMiw1ABoEjUAlllqAGToGAAZlhoATaIGwDJLDYAMHQMg
-        w1IDoEnUAFhmqQGQoWMAZFhqADSJGgDLLDUAMnQMgAxLDYAmUQNgmaUGQIaOAZBhqQHQJGoALLPUAMgQ
-        NQAy/nbs/vw8t9vtdrtXbgCIeZ4383zfW9JreEMAAAAASUVORK5CYII=
-</value>
-  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -517,86 +474,18 @@
         rkJggg==
 </value>
   </data>
-  <data name="btnLogin.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="progressLoading.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAABQCAYAAABcbTqwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAK1SURBVHhe7djPS5RBHMfx/o/Apc0f6+6mKzy1qKtLKIkH
-        oUQI2YMIEV6iWxRFh0AMT0HHCCJCvGQXu1SH6tBRQVA8SJf1sp72P/jWdx/aXBw/d3feh9dpZmcv8+aZ
-        mUvNZtMAhBEIIBAIIBAIIBAIIBAIIMhAGo0T29jcssXaik3dWrDicNUuZ0rAheb72Pfz/MKyvXu/afX6
-        cXD/u3MD2f78xfJDkzaQHw/+CdAN+nKjNlis2Ju3H4IdnAnEa1pafmC54kRwQaAb5QoVm52r2dHR744e
-        OgLxOJLyjGV6k+AiQLfz/b9/cBgOxL8cxIHY+f3kTCB+5+BYBZSsNzdmq2uv/gfir1V+IQ9NBmLkPezs
-        7qWB+FOX3+ZDE4EYZa4m9uTpahqIvweHJgExK4/NpoGMJNPBCUDMerJJGki2vxycAMSuFUhoAACBABKB
-        AAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKB
-        AAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKBAAKB
-        AAKBAAKBAAKBAAKBAEIrkJ5sEhwEYtcKpDhcDQ4CsWsFMjtXCw4CMRtJptNAXq6/tit9N4KTgFgt33uY
-        BrJ/cGiDxYngJCBGucK4ffy0nQbinj1fs77B0eBkICaZ3ut2d/F+q4t2II3GiVWn7gR/AMTkWumm1evH
-        nYG4nd09K/CihYjlhybt67fv7SY6AnE/fv6ypDxj2f5ycAGgG/mxyr8cp+NwZwJxftx69PiF5YqV4GJA
-        NxnIj9vt+aX2seq0YCD/eE3+1NX/90YfWhi4yPyUtFhbsY3NreD+dzIQIHYEAggEAggEAggEApyraX8A
-        U2lgAHiT2kUAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="txtLoginPassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAQQAAAA3CAYAAADqkTS9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAABrSURBVHhe7dRBEYAwDADB6GgekRAkIaXOof1XAezOnIUL
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL5nVN9ZPSUp
-        sq5HknZrCOdTSPpbPV8DsEf5U7B3uwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="txtLoginId.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAQQAAAA1CAYAAACnWZW2AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAABqSURBVHhe7dRBEYAwDADB6GgekRAkIaXOof3XAMPuzFm4
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADg60b1ndVTkiLr
-        eiRpt4ZwPoWkv9XzBft/R/mpSb4vAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="panelRight.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAiEAAAIpCAYAAAB0ROjqAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAm/SURBVHhe7djBCQJBFETBzT+ezU+Zg6DgUftdqmBg/0bw
-        6AsAIHXf9+O892+32+12u93uX9/nGwBg7iNEVAkAkBAhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0B
-        ACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAn
-        QgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQA
-        SOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCE
-        AAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBW
-        LCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsA
-        gIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRE
-        CACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAA
-        Cd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQ
-        AKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCK
-        JQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcA
-        kLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4I
-        AQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAg
-        oTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhIC
-        APRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFix
-        hAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAA
-        EpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMh
-        AMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAk
-        dAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIA
-        gJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuW
-        EAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBA
-        whICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIE
-        AFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE
-        7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA
-        0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUS
-        AgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBI
-        WEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QA
-        ACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQ
-        HQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEA
-        eiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhC
-        AICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJ
-        SwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAA
-        YMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6
-        AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBA
-        T4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsI
-        AJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASOgOACBh
-        CQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADoiRAAYMUSAgAkdAcAkLCEAAA9EQIA
-        rFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkBABK6AwBIWEIAgJ4IAQBWLCEAQEJ3
-        AAAJSwgA0BMhAMCKJQQASOgOACBhCQEAeiIEAFixhAAACd0BACQsIQBAT4QAACuWEAAgoTsAgIQlBADo
-        iRAAYMUSAgAkdAcAkLCEAAA9EQIArFhCAICE7gAAEpYQAKAnQgCAFUsIAJDQHQBAwhICAPRECACwYgkB
-        ABK6AwBIWEIAgJ4IAQBWLCEAQEJ3AAAJSwgA0BMhAMCKJQQASIgQACDxtTvOz9dzu91ut9vt/scNABC6
-        riela9aPfdnqqwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAA30AAAANCAYAAAAdQAflAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAEbSURBVHhe7duxTcNAGIbhjAHn5C4lnc8gJEagomYJBmAL
+        KjahZYVskAVIFEFBQwG2dJKV6AbIieeVniq/3X+yspAkSZIk/ZNCGh67mDddyr8AAAA0YNpwsX9N6fai
+        TLt6y5jfx+PP6ksAAAA4d7vVengoE++45Xp4GgffV+UhAAAAGhFS3l+mm6sy9ebGH7enxwAAALQnxOGt
+        TL252iEAAADtCan/LlNvrnYIAABAm8rUm6sdAQAA0KYy9ea61H/UDgEAAGhLiPmnTL256Y9+tWMAAAAa
+        E/OmTL25kPo8/rCrPgAAAEATwioflmm4L1PvuPHgOcR8OH0IAACA8zcNvpD6lzLx6nXp+m76FFh7AQAA
+        AGdrW//Ct1j8ASiBq3xFgaaDAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
